language/move-lang/tests/move_check/naming/unbound_struct_in_module.exp
error: 

   ┌── tests/move_check/naming/unbound_struct_in_module.move:6:12 ───
   │
 6 │     foo(s: X.S): X.S {
   │            ^^^ Unbound struct or resource 'S' in module '0x1.X'
   │

error: 

   ┌── tests/move_check/naming/unbound_struct_in_module.move:6:18 ───
   │
 6 │     foo(s: X.S): X.S {
   │                  ^^^ Unbound struct or resource 'S' in module '0x1.X'
   │

